# zero-copy-ipc

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  QUICKSTART.md  README_CN.md  USAGE.md
examples/: basic_usage.py  benchmark.py  multiprocess.py
src/zero_copy_ipc/: __init__.py  constants.py  dict.py  hash_table.py  heap_manager.py  lock.py  memory_layout.py  segmented_lock.py  serializer.py
tests/: comparison_final.py  comparison_minimal.py  comparison_simple.py  comparison_summary.py  optimization_summary.py  profile_update.py  quick_test.py  simple_test.py  test_dict.py  test_freelist.py  test_segmented_lock.py
