[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-copy-ipc"
version = "1.0.0"
description = "A pure Python zero-copy shared memory dictionary for multi-process IPC with O(1) performance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "senyangcai", email = "158119447@qq.com"}
]
maintainers = [
    {name = "senyangcai", email = "158119447@qq.com"}
]
keywords = [
    "zero-copy",
    "shared-memory",
    "ipc",
    "multiprocessing",
    "dict",
    "inter-process-communication",
    "memory-mapping",
    "high-performance",
    "segregated-lists",
    "O(1)",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Operating System",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "build>=0.10",
    "twine>=4.0",
]
examples = [
    "flask>=2.0",
    "gunicorn>=20.0",
]

[project.urls]
Homepage = "https://github.com/senyangcai/zero-copy-ipc"
Documentation = "https://github.com/senyangcai/zero-copy-ipc#readme"
Repository = "https://github.com/senyangcai/zero-copy-ipc.git"
Issues = "https://github.com/senyangcai/zero-copy-ipc/issues"
Changelog = "https://github.com/senyangcai/zero-copy-ipc/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]